# python-template

./: .pre-commit-config.yaml  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: context7.mdc  sequential_thinking.mdc  uv.mdc
