[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = ["src/**/*.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py


[project]
name = "ml-ai-project-template"
version = "0.1.0"
description = "A Python template for machine learning and AI projects"
authors = [{ name = "Yann POURCENOUX", email = "yann.pourcenoux@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/yourusername/your-repo" }
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "isort",
    "mypy",
    "pre-commit",
]
